--- a/sdk-test.html
+++ b/sdk-test.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Example Site</title>
+   
+    <!-- PASTE THIS SNIPPET TO INSTALL CHAT WIDGET -->
     <script src="./sdk.js"></script>
+
 </head>
 <body>
     
